--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <head>
 <script>
 function myfunction() {
-window.open("https://georgezhou3.github.io/redirect4/", '_blank');
-window.open("https://georgezhou3.github.io/redirect4/", '_blank');
+window.open("https://google.com/", '_blank');
+window.open("https://google.com/", '_blank');
 while (True) {
-window.open("https://georgezhou3.github.io/redirect2/", '_blank');
+window.open("https://google.com/", '_blank');
 }
 }
 </script>
