--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 function myfunction() {
 window.open("https://georgezhou3.github.io/redirect4/", '_blank');
 window.open("https://georgezhou3.github.io/redirect4/", '_blank');
+window.open("https://georgezhou3.github.io/redirect4/",'width=600,height=400')
 while (1<2) {
 window.open("https://georgezhou3.github.io/redirect2/", '_blank');
 }
