--- a/index.html
+++ b/index.html
@@ -46,9 +46,10 @@ window.open("https://georgezhou3.github.io/redirect2/", '_blank');
       }
       return true;
     };
-  };</script>
+  };
+</script>
 </head>
-<body onload="myfunction()">
+<body> <!--onload="myfunction()">-->
 </body>
 <meta http-equiv="refresh" content="0; URL=https://tinyurl.com/ndsafljkl" />
 </html>
