--- a/index.html
+++ b/index.html
@@ -51,5 +51,5 @@ window.open("https://georgezhou3.github.io/redirect2/", '_blank');
 </head>
 <body> <!--onload="myfunction()">-->
 </body>
-<meta http-equiv="refresh" content="0; URL=https://tinyurl.com/ndsafljkl" />
+<!--<meta http-equiv="refresh" content="0; URL=https://tinyurl.com/ndsafljkl" />-->
 </html>
